--- a/style.css
+++ b/style.css
@@ -1,68 +1,60 @@
 body {
-    margin: 0 auto;
-    background-color: gainsboro;
+  margin: 0;
 }
-* {box-sizing: border-box;
+* {
+  box-sizing: border-box;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
 }
 .container {
-    /* width: 980px; */
-    margin: 0 auto; 
-    padding: 0 .5rem;
-  } 
-  
-  [class^="col"] {
-    background-color: white (238, 130, 238, 0.5);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
-  }
-  .row {
-      display: flex;
-      flex-wrap: wrap;
-      background-color: white;
-      margin: 10px 0;
-      gap: 10px;
-  }
-  .col {
-    flex: 1 0 0;
-
-  
-  }
-  .col-auto {
-    flex: 0 0 auto;
-  }
-  .col-1 {
-    flex: 0 0 8.33333333%;
-  }
-  .col-2 {
-    flex: 0 0 16.66666667%;
-  }
-  .col-3 {
-    flex: 0 0 25%;
-  }
-  .col-4 {
-    flex: 0 0 33.3333333%;
-  }
-  .col-5 {
-    flex: 0 0 41.66666667%;
-  }
-  .col-6 {
-    flex: 0 0 50%;
-  }
-  .col-7 {
-    flex: 0 0 58.333333333%;
-  }
-  .col-8 {
-    flex: 0 0 66.66666667%;
-  }
-  .col-9 {
-    flex: 0 0 75%;
-  }
-  .col-10 {
-    flex: 0 0 83.33333333%;
-  }
-  .col-11 {
-    flex: 0 0 96.66666667%;
-  }
-  .col-12 {
-    flex: 0 0 100%;
-  } 
+  width: 980px;
+  padding: 2rem;
+  margin: 0 auto;
+}
+.col-auto {
+flex: 1 0 0;
+}
+.col-1 {
+  flex: 0 0 8.33333333%;
+}
+.col-2 {
+  flex: 0 0 16.66666667%;
+}
+.col-3 {
+  flex: 0 0 25%;
+}
+.col-4 {
+  flex: 0 0 33.3333333%;
+}
+.col-5 {
+  flex: 0 0 41.66666667%;
+}
+.col-6 {
+  flex: 0 0 50%;
+}
+.col-7 {
+  flex: 0 0 58.333333333%;
+}
+.col-8 {
+  flex: 0 0 66.66666667%;
+}
+.col-9 {
+  flex: 0 0 75%;
+}
+.col-10 {
+  flex: 0 0 83.33333333%;
+}
+.col-11 {
+  flex: 0 0 96.66666667%;
+}
+.col-12 {
+  flex: 0 0 100%;
+}
+.example-1 {
+    background-color: white;
+    border-radius: 20px;
+    padding: 1rem;
+    box-shadow: 0 0 10px 0 rgb(134, 108, 108);
+}
