--- a/style.css
+++ b/style.css
@@ -72,3 +72,8 @@ flex: 1 0 0;
       padding: 1rem;
       margin: 15px;
   }
+  .example-4 {
+    border: 2px solid grey;
+    margin: 10px;
+    padding: 15px;
+}
