--- a/style.css
+++ b/style.css
@@ -77,3 +77,8 @@ flex: 1 0 0;
     margin: 10px;
     padding: 15px;
 }
+.example-4:hover {
+  transform: scale(1.02);
+  box-shadow: 0 0 15px rgb(247, 211, 211);
+}
+
